--- a/UI/ColorVision.Database/Properties/Resources.ja.resx
+++ b/UI/ColorVision.Database/Properties/Resources.ja.resx
@@ -162,4 +162,7 @@
   <data name="Cancel" xml:space="preserve">
     <value>キャンセル</value>
   </data>
+  <data name="LogDatabase" xml:space="preserve">
+    <value>ログデータベース</value>
+  </data>
 </root>
