--- a/UI/ColorVision.Solution/Properties/Resources.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.resx
@@ -247,4 +247,7 @@
   <data name="Column" xml:space="preserve">
     <value>列</value>
   </data>
+  <data name="Terminal" xml:space="preserve">
+    <value>终端</value>
+  </data>
 </root>
