--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -2115,4 +2115,118 @@
   <data name="Lv" xml:space="preserve">
     <value>밝기 Lv(cd/m2)</value>
   </data>
+  <data name="MsgLogWin" xml:space="preserve">
+    <value>메시지 로그 창</value>
+  </data>
+  <data name="PhySpectrum" xml:space="preserve">
+    <value>물리적 분광기</value>
+  </data>
+  <data name="ComplyPoint" xml:space="preserve">
+    <value>가리키다</value>
+  </data>
+  <data name="ComplyPointList_" xml:space="preserve">
+    <value>점 세트</value>
+  </data>
+  <data name="EditDefaultComplianceDictionary" xml:space="preserve">
+    <value>기본 규정 준수 사전 편집</value>
+  </data>
+  <data name="CalibrationToolNotFound_DownloadPrompt" xml:space="preserve">
+    <value>교정 생성 도구를 찾을 수 없습니다. 온라인으로 다운로드하시겠습니까?</value>
+  </data>
+  <data name="DownloadCalibrationTool" xml:space="preserve">
+    <value>교정 생성 도구 다운로드</value>
+  </data>
+  <data name="SelectUpzipDirectry" xml:space="preserve">
+    <value>압축 해제 디렉토리를 선택해 주세요.</value>
+  </data>
+  <data name="LedDataFIle" xml:space="preserve">
+    <value>LED 데이터 파일</value>
+  </data>
+  <data name="LedDataFileNotFound" xml:space="preserve">
+    <value>LED 데이터 파일을 찾을 수 없습니다</value>
+  </data>
+  <data name="ImageFileNotFound" xml:space="preserve">
+    <value>이미지 파일을 찾을 수 없습니다</value>
+  </data>
+  <data name="ImageFileIsnotCVCIE" xml:space="preserve">
+    <value>이미지 파일은 CVCIE 파일이 아닙니다.</value>
+  </data>
+  <data name="ImageFileOpenFailed" xml:space="preserve">
+    <value>이미지 파일을 열 수 없습니다.</value>
+  </data>
+  <data name="SSCOMTool" xml:space="preserve">
+    <value>SSCOM 직렬 포트 디버깅 어시스턴트</value>
+  </data>
+  <data name="CalibrationFileCorrectionTool" xml:space="preserve">
+    <value>수정 파일 복구 도구</value>
+  </data>
+  <data name="AlgorithmView" xml:space="preserve">
+    <value>알고리즘 뷰</value>
+  </data>
+  <data name="StartTimeMs" xml:space="preserve">
+    <value>시작 시간(ms)</value>
+  </data>
+  <data name="FrequencySyncHz" xml:space="preserve">
+    <value>주파수 동기화(Hz)</value>
+  </data>
+  <data name="SaturationPercent" xml:space="preserve">
+    <value>포화도(%)</value>
+  </data>
+  <data name="ADMax" xml:space="preserve">
+    <value>최대 AD</value>
+  </data>
+  <data name="MaxPercent" xml:space="preserve">
+    <value>최대 백분율</value>
+  </data>
+  <data name="SaturationDifference" xml:space="preserve">
+    <value>채도 차이</value>
+  </data>
+  <data name="MaxExposureTimeMs" xml:space="preserve">
+    <value>최대 노출 시간(ms)</value>
+  </data>
+  <data name="MinExposureTimeMs" xml:space="preserve">
+    <value>최소 노출 시간(ms)</value>
+  </data>
+  <data name="BurstThresholdMs" xml:space="preserve">
+    <value>버스트 임계값(ms)</value>
+  </data>
+  <data name="EvaluationFunctionType" xml:space="preserve">
+    <value>평가 함수 유형</value>
+  </data>
+  <data name="StepSwingRange" xml:space="preserve">
+    <value>보폭 스윙 범위</value>
+  </data>
+  <data name="StepSwingRangeDiscription" xml:space="preserve">
+    <value>두 번째 단계 경로입니다. 실제 두 번째 단계 경로는 forwardparam *입니다.</value>
+  </data>
+  <data name="StepReductionFactor" xml:space="preserve">
+    <value>단계 크기 감소 계수</value>
+  </data>
+  <data name="SecondStepFactor" xml:space="preserve">
+    <value>두 번째 단계 계수</value>
+  </data>
+  <data name="CurrentStepSize" xml:space="preserve">
+    <value>현재 단계 경로를 사용 중입니다</value>
+  </data>
+  <data name="InitialStepSize" xml:space="preserve">
+    <value>첫 번째 단계</value>
+  </data>
+  <data name="StopStepSize" xml:space="preserve">
+    <value>정지 단계</value>
+  </data>
+  <data name="Deprecated" xml:space="preserve">
+    <value>더 이상 사용되지 않음</value>
+  </data>
+  <data name="MinEvaluationValue" xml:space="preserve">
+    <value>가장 낮은 평가</value>
+  </data>
+  <data name="TimeoutDuration" xml:space="preserve">
+    <value>타임아웃</value>
+  </data>
+  <data name="RestoreMysqlAutoFocusTemplateSettings" xml:space="preserve">
+    <value>MySQL AutoFocus 템플릿 설정 복원</value>
+  </data>
+  <data name="RestoreMysqlCameraRunParamTemplateSettings" xml:space="preserve">
+    <value>MysqlCameraRunParam 템플릿 설정 복원</value>
+  </data>
 </root>
