--- a/Plugins/ScreenRecorder/Properties/Resources.fr.resx
+++ b/Plugins/ScreenRecorder/Properties/Resources.fr.resx
@@ -120,4 +120,7 @@
   <data name="Record" xml:space="preserve">
     <value>Enregistrer</value>
   </data>
+  <data name="ScreenRecorder" xml:space="preserve">
+    <value>Enregistrer la vidéo</value>
+  </data>
 </root>
