--- a/Plugins/ScreenRecorder/Properties/Resources.ko.resx
+++ b/Plugins/ScreenRecorder/Properties/Resources.ko.resx
@@ -120,4 +120,7 @@
   <data name="Record" xml:space="preserve">
     <value>기록</value>
   </data>
+  <data name="ScreenRecorder" xml:space="preserve">
+    <value>비디오 녹화</value>
+  </data>
 </root>
