--- a/Plugins/WindowsServicePlugin/Properties/Resources.ja.resx
+++ b/Plugins/WindowsServicePlugin/Properties/Resources.ja.resx
@@ -156,4 +156,19 @@
   <data name="DumpFileSettings" xml:space="preserve">
     <value>ダンプファイルの設定</value>
   </data>
+  <data name="ActivateWindows" xml:space="preserve">
+    <value>Windowsのアクティベーション</value>
+  </data>
+  <data name="RestartService" xml:space="preserve">
+    <value>サービスを再起動する</value>
+  </data>
+  <data name="RestartServiceSucess" xml:space="preserve">
+    <value>サービスの再起動に成功しました</value>
+  </data>
+  <data name="ServiceRestartFailed_PleaseRestartManually" xml:space="preserve">
+    <value>サービスの再起動に失敗した場合は、手動でサービスを再起動してください。</value>
+  </data>
+  <data name="UpdateService" xml:space="preserve">
+    <value>アップデートサービス</value>
+  </data>
 </root>
