--- a/UI/ColorVision.Database/Properties/Resources.en.resx
+++ b/UI/ColorVision.Database/Properties/Resources.en.resx
@@ -162,4 +162,7 @@
   <data name="Cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
+  <data name="LogDatabase" xml:space="preserve">
+    <value>Log database</value>
+  </data>
 </root>
