--- a/UI/ColorVision.Solution/Properties/Resources.ko.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.ko.resx
@@ -267,4 +267,7 @@
   <data name="Column" xml:space="preserve">
     <value>목록</value>
   </data>
+  <data name="Terminal" xml:space="preserve">
+    <value>단말기</value>
+  </data>
 </root>
