--- a/UI/ColorVision.Solution/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.zh-Hant.resx
@@ -267,4 +267,7 @@
   <data name="Column" xml:space="preserve">
     <value>列</value>
   </data>
+  <data name="Terminal" xml:space="preserve">
+    <value>終端</value>
+  </data>
 </root>
