--- a/UI/ColorVision.UI/Properties/Resources.resx
+++ b/UI/ColorVision.UI/Properties/Resources.resx
@@ -511,4 +511,13 @@
   <data name="ProjectSolution_P" xml:space="preserve">
     <value>项目/解决方案(_P)...</value>
   </data>
+  <data name="MysqlTool" xml:space="preserve">
+    <value>Mysql工具</value>
+  </data>
+  <data name="MsgList" xml:space="preserve">
+    <value> "消息日志窗口</value>
+  </data>
+  <data name="SocketManagementWindow" xml:space="preserve">
+    <value>Socket管理窗口</value>
+  </data>
 </root>
