--- a/UI/ColorVision.UI/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.UI/Properties/Resources.zh-Hant.resx
@@ -472,4 +472,13 @@
   <data name="ProjectSolution_P" xml:space="preserve">
     <value>項目/解決方案(P)...</value>
   </data>
+  <data name="MysqlTool" xml:space="preserve">
+    <value>Mysql工具</value>
+  </data>
+  <data name="MsgList" xml:space="preserve">
+    <value>"訊息日誌視窗</value>
+  </data>
+  <data name="SocketManagementWindow" xml:space="preserve">
+    <value>Socket管理視窗</value>
+  </data>
 </root>
